agents/mlb-agent/deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mlb-agent
  labels:
    app.kubernetes.io/name: mlb-agent
  annotations:
    haproxy.router.openshift.io/timeout: 1800s
spec:
  to:
    kind: Service
    name: mlb-agent
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
